--- a/Taxi Calculator/app/build.gradle
+++ b/Taxi Calculator/app/build.gradle
@@ -1,18 +1,29 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 35
     defaultConfig {
         applicationId "ar.com.lrusso.taxicalculator"
+        namespace("ar.com.lrusso.taxicalculator")
+
         minSdkVersion 14
-        targetSdkVersion 34
-        versionCode 30
-        versionName "1.5.0"
+        targetSdkVersion 35
+        versionCode 31
+        versionName "1.5.1"
+    }
+    signingConfigs {
+        release {
+            storeFile file("../keystore")
+            storePassword System.getenv("ANDROID_KEYSTORE_PASSWORD")
+            keyAlias System.getenv("ANDROID_KEY_ALIAS")
+            keyPassword System.getenv("ANDROID_KEY_PASSWORD")
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
