--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Making Gradlew executable
         run: chmod +x "./Taxi Calculator/gradlew"
       - name: Building the AAB file
-        run: cd Android && cd "Taxi Calculator" && ./gradlew clean && ./gradlew bundleRelease
+        run: cd "Taxi Calculator" && ./gradlew clean && ./gradlew bundleRelease
         env:
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
@@ -31,7 +31,7 @@ jobs:
           name: app-release-aab
           path: "Android/Taxi Calculator/app/build/outputs/bundle/release/app-release.aab"
       - name: Building the APK file
-        run: cd Android && cd "Taxi Calculator" && ./gradlew clean && ./gradlew assembleRelease
+        run: cd "Taxi Calculator" && ./gradlew clean && ./gradlew assembleRelease
         env:
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
